feat: Add LoRa weather station firmware (transmitter and HTTP/MQTT gateways) and a historical weather data collection script.

--- a/examples/data_collections/import_weather.ipynb
+++ b/examples/data_collections/import_weather.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d71c2d8a",
    "metadata": {},
    "outputs": [
@@ -20,8 +20,8 @@
     "\n",
     "url = \"https://archive-api.open-meteo.com/v1/archive\"\n",
     "params = {\n",
-    "    \"latitude\": -6.9762,\n",
-    "    \"longitude\": 110.4199,\n",
+    "    \"latitude\": -7.0520702239386175, \n",
+    "    \"longitude\": 110.43532807750137,\n",
     "    \"start_date\": \"2000-01-01\",\n",
     "    \"end_date\": \"2025-11-27\",\n",
     "    \"hourly\": \"temperature_2m,relative_humidity_2m,pressure_msl,precipitation,wind_speed_10m\",\n",
