--- a/example_v2/model_training/weather_model_training_advanced.ipynb
+++ b/example_v2/model_training/weather_model_training_advanced.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
      "output_type": "stream",
      "text": [
       "✓ Semua pustaka berhasil diimpor\n",
-      "Waktu eksekusi: 2025-12-05 09:47:01.199209\n"
+      "Waktu eksekusi: 2025-12-05 12:13:08.633040\n"
      ]
     }
    ],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -180,14 +180,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Pra-Pemrosesan Data dan Feature Engineering\n",
+    "## 3. Analisis Data Eksplorasi (EDA)\n",
     "\n",
-    "### 3.1 Label Encoding untuk Kolom Kategorikal"
+    "Memahami distribusi, korelasi, dan pola dalam data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 1) (2577689616.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[3], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(f\"\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"\n",
+    "{'='*60}\")\n",
+    "print(\"ANALISIS DATA EKSPLORASI (EDA)\")\n",
+    "print(f\"{'='*60}\")\n",
+    "\n",
+    "# Statistik Deskriptif\n",
+    "print(\"nStatistik Deskriptif untuk Fitur Numerik:\")\n",
+    "print(df[regression_targets].describe())\n",
+    "\n",
+    "# Visualisasi Distribusi\n",
+    "print(\"Visualisasi Distribusi Parameter Cuaca:\")\n",
+    "fig, axes = plt.subplots(2, 2, figsize=(12, 8))\n",
+    "fig.suptitle('Distribusi Parameter Cuaca', fontsize=16)\n",
+    "for i, col in enumerate(regression_targets):\n",
+    "    sns.histplot(df[col], kde=True, ax=axes[i//2, i%2])\n",
+    "    axes[i//2, i%2].set_title(col)\n",
+    "plt.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
+    "plt.show()\n",
+    "\n",
+    "# Analisis Korelasi\n",
+    "print(\"Heatmap Korelasi Antar Variabel:\")\n",
+    "correlation_matrix = df[regression_targets].corr()\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', fmt='.2f')\n",
+    "plt.title('Heatmap Korelasi')\n",
+    "plt.show()\n",
+    "\n",
+    "# Analisis Deret Waktu (Time Series Plot)\n",
+    "print(\"Plot Garis Deret Waktu (Sampel 1 Tahun Terakhir):\")\n",
+    "df_sample = df[df['timestamp'] > df['timestamp'].max() - pd.Timedelta(days=365)]\n",
+    "fig, axes = plt.subplots(4, 1, figsize=(15, 12), sharex=True)\n",
+    "fig.suptitle('Analisis Deret Waktu (1 Tahun Terakhir)', fontsize=16)\n",
+    "for i, col in enumerate(regression_targets):\n",
+    "    axes[i].plot(df_sample['timestamp'], df_sample[col], label=col)\n",
+    "    axes[i].set_ylabel(col)\n",
+    "    axes[i].legend()\n",
+    "    axes[i].grid(True)\n",
+    "plt.xlabel('Tanggal')\n",
+    "plt.tight_layout(rect=[0, 0.03, 1, 0.96])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Pra-Pemrosesan Data dan Feature Engineering\n",
+    "\n",
+    "### 4.1 Label Encoding untuk Kolom Kategorikal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -223,14 +289,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2 Membuat Fitur Lag dan Rolling Mean\n",
+    "### 4.2 Membuat Fitur Lag dan Rolling Mean\n",
     "\n",
     "Fitur lag membantu model memahami pola temporal dengan menggunakan nilai historis."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -263,14 +329,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.3 Fitur Cyclical untuk Time Components\n",
+    "### 4.3 Fitur Cyclical untuk Time Components\n",
     "\n",
     "Menggunakan sine/cosine encoding untuk menangkap sifat cyclical dari waktu."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -312,14 +378,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Persiapan Data untuk Training\n",
+    "## 5. Persiapan Data untuk Training\n",
     "\n",
     "Definisikan fitur dan target, kemudian split data menggunakan time-series split."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -424,14 +490,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Komparasi Model Regresi\n",
+    "## 6. Komparasi Model Regresi\n",
     "\n",
     "Melatih dan membandingkan berbagai algoritma regresi untuk prediksi parameter cuaca."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -569,14 +635,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Komparasi Model Klasifikasi\n",
+    "## 7. Komparasi Model Klasifikasi\n",
     "\n",
     "Melatih dan membandingkan berbagai algoritma klasifikasi untuk prediksi kondisi cuaca."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -692,14 +758,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Analisis Hasil dan Kinerja Individual Parameter\n",
+    "## 8. Analisis Hasil dan Kinerja Individual Parameter\n",
     "\n",
     "Evaluasi performa model terbaik untuk setiap parameter cuaca."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -788,14 +854,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8. Penyimpanan Model Terbaik\n",
+    "## 9. Penyimpanan Model Terbaik\n",
     "\n",
     "Simpan model terbaik beserta metadata untuk deployment."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -855,14 +921,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9. Visualisasi Perbandingan Aktual vs Prediksi\n",
+    "## 10. Visualisasi Perbandingan Aktual vs Prediksi\n",
     "\n",
     "Membuat plot untuk membandingkan nilai aktual dengan prediksi model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -945,14 +1011,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10. Visualisasi Dampak Data Inkremental\n",
+    "## 11. Visualisasi Dampak Data Inkremental\n",
     "\n",
     "Analisis bagaimana ukuran data training mempengaruhi performa model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1066,14 +1132,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 11. Ringkasan Akhir\n",
+    "## 12. Ringkasan Akhir\n",
     "\n",
     "Tampilkan ringkasan hasil training dan model yang dihasilkan."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1181,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "deepl",
    "language": "python",
    "name": "python3"
   },
@@ -1129,7 +1195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
