--- a/example_v2/data_processing/import_dataset_hourly_daily.ipynb
+++ b/example_v2/data_processing/import_dataset_hourly_daily.ipynb
@@ -5,7 +5,82 @@
    "execution_count": null,
    "id": "88ff194e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetching data for 2000 (from 2000-01-01 to 2000-12-31)...\n",
+      "Fetching data for 2001 (from 2001-01-01 to 2001-12-31)...\n",
+      "Fetching data for 2002 (from 2002-01-01 to 2002-12-31)...\n",
+      "Fetching data for 2003 (from 2003-01-01 to 2003-12-31)...\n",
+      "Fetching data for 2004 (from 2004-01-01 to 2004-12-31)...\n",
+      "Fetching data for 2005 (from 2005-01-01 to 2005-12-31)...\n",
+      "Fetching data for 2006 (from 2006-01-01 to 2006-12-31)...\n",
+      "Fetching data for 2007 (from 2007-01-01 to 2007-12-31)...\n",
+      "Fetching data for 2008 (from 2008-01-01 to 2008-12-31)...\n",
+      "Fetching data for 2009 (from 2009-01-01 to 2009-12-31)...\n",
+      "Fetching data for 2010 (from 2010-01-01 to 2010-12-31)...\n",
+      "Fetching data for 2011 (from 2011-01-01 to 2011-12-31)...\n",
+      "Fetching data for 2012 (from 2012-01-01 to 2012-12-31)...\n",
+      "Fetching data for 2013 (from 2013-01-01 to 2013-12-31)...\n",
+      "Fetching data for 2014 (from 2014-01-01 to 2014-12-31)...\n",
+      "Fetching data for 2015 (from 2015-01-01 to 2015-12-31)...\n",
+      "Error fetching data for 2015: 429 Client Error: Too Many Requests for url: https://archive-api.open-meteo.com/v1/archive?latitude=-7.0520702239386175&longitude=110.43532807750137&start_date=2015-01-01&end_date=2015-12-31&hourly=temperature_2m&hourly=weather_code&hourly=relative_humidity_2m&hourly=pressure_msl&hourly=wind_speed_10m&hourly=rain&hourly=precipitation&hourly=apparent_temperature&hourly=surface_pressure&daily=temperature_2m_max&daily=temperature_2m_min&daily=weather_code&daily=temperature_2m_mean&daily=relative_humidity_2m_mean&daily=pressure_msl_mean&daily=wind_speed_10m_mean&timezone=Asia%2FJakarta\n",
+      "Fetching data for 2016 (from 2016-01-01 to 2016-12-31)...\n",
+      "Error fetching data for 2016: 429 Client Error: Too Many Requests for url: https://archive-api.open-meteo.com/v1/archive?latitude=-7.0520702239386175&longitude=110.43532807750137&start_date=2016-01-01&end_date=2016-12-31&hourly=temperature_2m&hourly=weather_code&hourly=relative_humidity_2m&hourly=pressure_msl&hourly=wind_speed_10m&hourly=rain&hourly=precipitation&hourly=apparent_temperature&hourly=surface_pressure&daily=temperature_2m_max&daily=temperature_2m_min&daily=weather_code&daily=temperature_2m_mean&daily=relative_humidity_2m_mean&daily=pressure_msl_mean&daily=wind_speed_10m_mean&timezone=Asia%2FJakarta\n",
+      "Fetching data for 2017 (from 2017-01-01 to 2017-12-31)...\n",
+      "Error fetching data for 2017: 429 Client Error: Too Many Requests for url: https://archive-api.open-meteo.com/v1/archive?latitude=-7.0520702239386175&longitude=110.43532807750137&start_date=2017-01-01&end_date=2017-12-31&hourly=temperature_2m&hourly=weather_code&hourly=relative_humidity_2m&hourly=pressure_msl&hourly=wind_speed_10m&hourly=rain&hourly=precipitation&hourly=apparent_temperature&hourly=surface_pressure&daily=temperature_2m_max&daily=temperature_2m_min&daily=weather_code&daily=temperature_2m_mean&daily=relative_humidity_2m_mean&daily=pressure_msl_mean&daily=wind_speed_10m_mean&timezone=Asia%2FJakarta\n",
+      "Fetching data for 2018 (from 2018-01-01 to 2018-12-31)...\n",
+      "Error fetching data for 2018: 429 Client Error: Too Many Requests for url: https://archive-api.open-meteo.com/v1/archive?latitude=-7.0520702239386175&longitude=110.43532807750137&start_date=2018-01-01&end_date=2018-12-31&hourly=temperature_2m&hourly=weather_code&hourly=relative_humidity_2m&hourly=pressure_msl&hourly=wind_speed_10m&hourly=rain&hourly=precipitation&hourly=apparent_temperature&hourly=surface_pressure&daily=temperature_2m_max&daily=temperature_2m_min&daily=weather_code&daily=temperature_2m_mean&daily=relative_humidity_2m_mean&daily=pressure_msl_mean&daily=wind_speed_10m_mean&timezone=Asia%2FJakarta\n",
+      "Fetching data for 2019 (from 2019-01-01 to 2019-12-31)...\n",
+      "Error fetching data for 2019: 429 Client Error: Too Many Requests for url: https://archive-api.open-meteo.com/v1/archive?latitude=-7.0520702239386175&longitude=110.43532807750137&start_date=2019-01-01&end_date=2019-12-31&hourly=temperature_2m&hourly=weather_code&hourly=relative_humidity_2m&hourly=pressure_msl&hourly=wind_speed_10m&hourly=rain&hourly=precipitation&hourly=apparent_temperature&hourly=surface_pressure&daily=temperature_2m_max&daily=temperature_2m_min&daily=weather_code&daily=temperature_2m_mean&daily=relative_humidity_2m_mean&daily=pressure_msl_mean&daily=wind_speed_10m_mean&timezone=Asia%2FJakarta\n",
+      "Fetching data for 2020 (from 2020-01-01 to 2020-12-31)...\n",
+      "Error fetching data for 2020: 429 Client Error: Too Many Requests for url: https://archive-api.open-meteo.com/v1/archive?latitude=-7.0520702239386175&longitude=110.43532807750137&start_date=2020-01-01&end_date=2020-12-31&hourly=temperature_2m&hourly=weather_code&hourly=relative_humidity_2m&hourly=pressure_msl&hourly=wind_speed_10m&hourly=rain&hourly=precipitation&hourly=apparent_temperature&hourly=surface_pressure&daily=temperature_2m_max&daily=temperature_2m_min&daily=weather_code&daily=temperature_2m_mean&daily=relative_humidity_2m_mean&daily=pressure_msl_mean&daily=wind_speed_10m_mean&timezone=Asia%2FJakarta\n",
+      "Fetching data for 2021 (from 2021-01-01 to 2021-12-31)...\n",
+      "Error fetching data for 2021: 429 Client Error: Too Many Requests for url: https://archive-api.open-meteo.com/v1/archive?latitude=-7.0520702239386175&longitude=110.43532807750137&start_date=2021-01-01&end_date=2021-12-31&hourly=temperature_2m&hourly=weather_code&hourly=relative_humidity_2m&hourly=pressure_msl&hourly=wind_speed_10m&hourly=rain&hourly=precipitation&hourly=apparent_temperature&hourly=surface_pressure&daily=temperature_2m_max&daily=temperature_2m_min&daily=weather_code&daily=temperature_2m_mean&daily=relative_humidity_2m_mean&daily=pressure_msl_mean&daily=wind_speed_10m_mean&timezone=Asia%2FJakarta\n",
+      "Fetching data for 2022 (from 2022-01-01 to 2022-12-31)...\n",
+      "Error fetching data for 2022: 429 Client Error: Too Many Requests for url: https://archive-api.open-meteo.com/v1/archive?latitude=-7.0520702239386175&longitude=110.43532807750137&start_date=2022-01-01&end_date=2022-12-31&hourly=temperature_2m&hourly=weather_code&hourly=relative_humidity_2m&hourly=pressure_msl&hourly=wind_speed_10m&hourly=rain&hourly=precipitation&hourly=apparent_temperature&hourly=surface_pressure&daily=temperature_2m_max&daily=temperature_2m_min&daily=weather_code&daily=temperature_2m_mean&daily=relative_humidity_2m_mean&daily=pressure_msl_mean&daily=wind_speed_10m_mean&timezone=Asia%2FJakarta\n",
+      "Fetching data for 2023 (from 2023-01-01 to 2023-12-31)...\n",
+      "Error fetching data for 2023: 429 Client Error: Too Many Requests for url: https://archive-api.open-meteo.com/v1/archive?latitude=-7.0520702239386175&longitude=110.43532807750137&start_date=2023-01-01&end_date=2023-12-31&hourly=temperature_2m&hourly=weather_code&hourly=relative_humidity_2m&hourly=pressure_msl&hourly=wind_speed_10m&hourly=rain&hourly=precipitation&hourly=apparent_temperature&hourly=surface_pressure&daily=temperature_2m_max&daily=temperature_2m_min&daily=weather_code&daily=temperature_2m_mean&daily=relative_humidity_2m_mean&daily=pressure_msl_mean&daily=wind_speed_10m_mean&timezone=Asia%2FJakarta\n",
+      "Fetching data for 2024 (from 2024-01-01 to 2024-12-31)...\n",
+      "Error fetching data for 2024: 429 Client Error: Too Many Requests for url: https://archive-api.open-meteo.com/v1/archive?latitude=-7.0520702239386175&longitude=110.43532807750137&start_date=2024-01-01&end_date=2024-12-31&hourly=temperature_2m&hourly=weather_code&hourly=relative_humidity_2m&hourly=pressure_msl&hourly=wind_speed_10m&hourly=rain&hourly=precipitation&hourly=apparent_temperature&hourly=surface_pressure&daily=temperature_2m_max&daily=temperature_2m_min&daily=weather_code&daily=temperature_2m_mean&daily=relative_humidity_2m_mean&daily=pressure_msl_mean&daily=wind_speed_10m_mean&timezone=Asia%2FJakarta\n",
+      "Fetching data for 2025 (from 2025-01-01 to 2025-12-05)...\n",
+      "Error fetching data for 2025: 429 Client Error: Too Many Requests for url: https://archive-api.open-meteo.com/v1/archive?latitude=-7.0520702239386175&longitude=110.43532807750137&start_date=2025-01-01&end_date=2025-12-05&hourly=temperature_2m&hourly=weather_code&hourly=relative_humidity_2m&hourly=pressure_msl&hourly=wind_speed_10m&hourly=rain&hourly=precipitation&hourly=apparent_temperature&hourly=surface_pressure&daily=temperature_2m_max&daily=temperature_2m_min&daily=weather_code&daily=temperature_2m_mean&daily=relative_humidity_2m_mean&daily=pressure_msl_mean&daily=wind_speed_10m_mean&timezone=Asia%2FJakarta\n",
+      "Data successfully saved to ../data\\historical_data_2000_2024.csv\n",
+      "Total records: 131496\n",
+      "   id           timestamp  hour  day  month  year  temp  humidity  windspeed  \\\n",
+      "0   0 2000-01-01 00:00:00     0    1      1  2000  21.8        98        4.0   \n",
+      "1   1 2000-01-01 01:00:00     1    1      1  2000  21.4        99        4.0   \n",
+      "2   2 2000-01-01 02:00:00     2    1      1  2000  21.4        98        3.2   \n",
+      "3   3 2000-01-01 03:00:00     3    1      1  2000  21.2        99        4.6   \n",
+      "4   4 2000-01-01 04:00:00     4    1      1  2000  21.0        99        3.6   \n",
+      "\n",
+      "   sealevelpressure  ...  surface_pressure  weather_code  conditions  \\\n",
+      "0            1008.4  ...             984.5             3    Overcast   \n",
+      "1            1007.9  ...             983.9             3    Overcast   \n",
+      "2            1007.4  ...             983.4             3    Overcast   \n",
+      "3            1007.0  ...             983.0             3    Overcast   \n",
+      "4            1006.9  ...             982.9             3    Overcast   \n",
+      "\n",
+      "   temp_max_daily  temp_min_daily weather_code_daily  temp_mean_daily  \\\n",
+      "0            27.5            20.8                 53             24.1   \n",
+      "1            27.5            20.8                 53             24.1   \n",
+      "2            27.5            20.8                 53             24.1   \n",
+      "3            27.5            20.8                 53             24.1   \n",
+      "4            27.5            20.8                 53             24.1   \n",
+      "\n",
+      "   humidity_avg_daily  pressure_avg_daily  windspeed_avg_daily  \n",
+      "0                  91              1007.3                  6.3  \n",
+      "1                  91              1007.3                  6.3  \n",
+      "2                  91              1007.3                  6.3  \n",
+      "3                  91              1007.3                  6.3  \n",
+      "4                  91              1007.3                  6.3  \n",
+      "\n",
+      "[5 rows x 23 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import pandas as pd\n",
@@ -52,7 +127,8 @@
     "                   \"pressure_msl\", \"wind_speed_10m\", \"rain\", \"precipitation\", \n",
     "                   \"apparent_temperature\", \"surface_pressure\"],\n",
     "        \"daily\": [\"temperature_2m_max\", \"temperature_2m_min\", \"weather_code\", \n",
-    "                  \"temperature_2m_mean\"],\n",
+    "                  \"temperature_2m_mean\", \"relative_humidity_2m_mean\", \n",
+    "                  \"pressure_msl_mean\", \"wind_speed_10m_mean\"],\n",
     "        \"timezone\": TIMEZONE\n",
     "    }\n",
     "    \n",
@@ -103,13 +179,16 @@
     "            df_hourly[\"timestamp\"] = pd.to_datetime(df_hourly[\"timestamp\"])\n",
     "            df_hourly[\"date_only\"] = df_hourly[\"timestamp\"].dt.date # Helper for merging\n",
     "\n",
-    "            # Process daily data\n",
+    "            # Process daily data (with new avg features)\n",
     "            df_daily = pd.DataFrame({\n",
     "                \"date_only\": daily_data[\"time\"],\n",
     "                \"temp_max_daily\": daily_data[\"temperature_2m_max\"],\n",
     "                \"temp_min_daily\": daily_data[\"temperature_2m_min\"],\n",
     "                \"weather_code_daily\": daily_data[\"weather_code\"],\n",
-    "                \"temp_mean_daily\": daily_data[\"temperature_2m_mean\"]\n",
+    "                \"temp_mean_daily\": daily_data[\"temperature_2m_mean\"],\n",
+    "                \"humidity_avg_daily\": daily_data[\"relative_humidity_2m_mean\"],\n",
+    "                \"pressure_avg_daily\": daily_data[\"pressure_msl_mean\"],\n",
+    "                \"windspeed_avg_daily\": daily_data[\"wind_speed_10m_mean\"]\n",
     "            })\n",
     "            df_daily[\"date_only\"] = pd.to_datetime(df_daily[\"date_only\"]).dt.date\n",
     "\n",
@@ -142,7 +221,8 @@
     "                      \"temp\", \"humidity\", \"windspeed\", \"sealevelpressure\", \n",
     "                      \"rain\", \"precipitation\", \"apparent_temperature\", \"surface_pressure\",\n",
     "                      \"weather_code\", \"conditions\", \n",
-    "                      \"temp_max_daily\", \"temp_min_daily\", \"weather_code_daily\", \"temp_mean_daily\"]\n",
+    "                      \"temp_max_daily\", \"temp_min_daily\", \"weather_code_daily\", \"temp_mean_daily\",\n",
+    "                      \"humidity_avg_daily\", \"pressure_avg_daily\", \"windspeed_avg_daily\"]\n",
     "    \n",
     "    final_df = df[output_columns]\n",
     "    \n",
@@ -151,7 +231,7 @@
     "    if not os.path.exists(output_dir):\n",
     "        os.makedirs(output_dir)\n",
     "\n",
-    "    output_file = os.path.join(output_dir, \"historical_data_2000_2024.csv\")\n",
+    "    output_file = os.path.join(output_dir, \"historical_data_2000_2024_hourly_daily.csv\")\n",
     "    final_df.to_csv(output_file, index=False)\n",
     "    print(f\"Data successfully saved to {output_file}\")\n",
     "    print(f\"Total records: {len(final_df)}\")\n",
@@ -162,8 +242,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "deepl",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
