feat: Add v2.0 model selection notebook with complete implementation and training guide.

--- a/example_v2/model_training/model_selection_v2.ipynb
+++ b/example_v2/model_training/model_selection_v2.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
        "[8 rows x 22 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
        "65            10.288356    584"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +922,7 @@
    ],
    "source": [
     "df_hourly['dew_point'] = df_hourly['temp'] - ((100 - df_hourly['humidity']) / 5)\n",
-    "df_hourly['temp_range'] = df_hourly['temp_max_daily'] - df_hourly['temp_min_daily']\n",
+    "df_hourly['temp_range'] = df_hourly['temp_max_daily'].shift(24) - df_hourly['temp_min_daily'].shift(24)\n",
     "df_hourly['humid_temp_ratio'] = df_hourly['humidity'] / (df_hourly['temp'] + 1)\n",
     "print(\"Interaction features created\")"
    ]
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -953,6 +953,8 @@
     "    df_hourly[f'{col}_lag_1'] = df_hourly[col].shift(1)\n",
     "    df_hourly[f'{col}_lag_24'] = df_hourly[col].shift(24)\n",
     "    df_hourly[f'{col}_rolling_24'] = df_hourly[col].rolling(24).mean()\n",
+    "    df_hourly[f'{col}_rolling_3'] = df_hourly[col].rolling(3).mean()\n",
+    "    df_hourly[f'{col}_rolling_6'] = df_hourly[col].rolling(6).mean()\n",
     "    df_hourly[f'{col}_rolling_std_24'] = df_hourly[col].rolling(24).std()\n",
     "\n",
     "df_hourly = df_hourly.dropna().reset_index(drop=True)\n",
@@ -968,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1109,10 +1111,10 @@
     "# Features Hourly\n",
     "hourly_feature_cols = [\n",
     "    'hour_sin', 'hour_cos', 'month_sin', 'month_cos',\n",
-    "    'temp_lag_1', 'temp_lag_24', 'temp_rolling_24',\n",
-    "    'humidity_lag_1', 'humidity_lag_24', 'humidity_rolling_24',\n",
-    "    'windspeed_lag_1', 'windspeed_lag_24', 'windspeed_rolling_24',\n",
-    "    'sealevelpressure_lag_1', 'sealevelpressure_lag_24', 'sealevelpressure_rolling_24',\n",
+    "    'temp_lag_1', 'temp_lag_24', 'temp_rolling_24', 'temp_rolling_3', 'temp_rolling_6',\n",
+    "    'humidity_lag_1', 'humidity_lag_24', 'humidity_rolling_24', 'humidity_rolling_3', 'humidity_rolling_6',\n",
+    "    'windspeed_lag_1', 'windspeed_lag_24', 'windspeed_rolling_24', 'windspeed_rolling_3', 'windspeed_rolling_6',\n",
+    "    'sealevelpressure_lag_1', 'sealevelpressure_lag_24', 'sealevelpressure_rolling_24', 'sealevelpressure_rolling_3', 'sealevelpressure_rolling_6',\n",
     "    'dew_point', 'humid_temp_ratio'\n",
     "]\n",
     "hourly_target_reg = ['temp', 'humidity', 'windspeed', 'sealevelpressure']\n",
@@ -1141,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1234,37 +1236,37 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>XGBoost Regressor</td>\n",
-       "      <td>0.944384</td>\n",
-       "      <td>1.014336</td>\n",
-       "      <td>0.485860</td>\n",
+       "      <td>0.973863</td>\n",
+       "      <td>0.700147</td>\n",
+       "      <td>0.359699</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Linear Regression</td>\n",
-       "      <td>0.925401</td>\n",
-       "      <td>1.336856</td>\n",
-       "      <td>0.810249</td>\n",
+       "      <td>0.968570</td>\n",
+       "      <td>0.983155</td>\n",
+       "      <td>0.603512</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.920926</td>\n",
-       "      <td>1.117679</td>\n",
-       "      <td>0.606992</td>\n",
+       "      <td>0.945558</td>\n",
+       "      <td>0.891854</td>\n",
+       "      <td>0.515611</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>K-Neighbors Regressor</td>\n",
-       "      <td>0.860910</td>\n",
-       "      <td>2.331728</td>\n",
-       "      <td>1.434713</td>\n",
+       "      <td>0.888599</td>\n",
+       "      <td>1.927346</td>\n",
+       "      <td>1.237030</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Decision Tree Regressor</td>\n",
-       "      <td>0.829034</td>\n",
-       "      <td>1.464245</td>\n",
-       "      <td>1.007436</td>\n",
+       "      <td>0.853477</td>\n",
+       "      <td>1.303800</td>\n",
+       "      <td>0.936126</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1272,11 +1274,11 @@
       ],
       "text/plain": [
        "                     Model        R2      RMSE       MAE\n",
-       "4        XGBoost Regressor  0.944384  1.014336  0.485860\n",
-       "0        Linear Regression  0.925401  1.336856  0.810249\n",
-       "3  Random Forest Regressor  0.920926  1.117679  0.606992\n",
-       "1    K-Neighbors Regressor  0.860910  2.331728  1.434713\n",
-       "2  Decision Tree Regressor  0.829034  1.464245  1.007436"
+       "4        XGBoost Regressor  0.973863  0.700147  0.359699\n",
+       "0        Linear Regression  0.968570  0.983155  0.603512\n",
+       "3  Random Forest Regressor  0.945558  0.891854  0.515611\n",
+       "1    K-Neighbors Regressor  0.888599  1.927346  1.237030\n",
+       "2  Decision Tree Regressor  0.853477  1.303800  0.936126"
       ]
      },
      "metadata": {},
@@ -1328,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1371,26 +1373,26 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>XGBoost Classifier</td>\n",
-       "      <td>0.452262</td>\n",
-       "      <td>0.411836</td>\n",
+       "      <td>0.457079</td>\n",
+       "      <td>0.416321</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Random Forest Classifier</td>\n",
-       "      <td>0.448742</td>\n",
-       "      <td>0.401398</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Decision Tree Classifier</td>\n",
-       "      <td>0.434970</td>\n",
-       "      <td>0.388742</td>\n",
+       "      <td>0.454395</td>\n",
+       "      <td>0.403784</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Logistic Regression</td>\n",
-       "      <td>0.431472</td>\n",
-       "      <td>0.362764</td>\n",
+       "      <td>0.430130</td>\n",
+       "      <td>0.362297</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Decision Tree Classifier</td>\n",
+       "      <td>0.426148</td>\n",
+       "      <td>0.390207</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1398,10 +1400,10 @@
       ],
       "text/plain": [
        "                      Model  Accuracy        F1\n",
-       "3        XGBoost Classifier  0.452262  0.411836\n",
-       "2  Random Forest Classifier  0.448742  0.401398\n",
-       "1  Decision Tree Classifier  0.434970  0.388742\n",
-       "0       Logistic Regression  0.431472  0.362764"
+       "3        XGBoost Classifier  0.457079  0.416321\n",
+       "2  Random Forest Classifier  0.454395  0.403784\n",
+       "0       Logistic Regression  0.430130  0.362297\n",
+       "1  Decision Tree Classifier  0.426148  0.390207"
       ]
      },
      "metadata": {},
@@ -1447,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
