feat: update notebook training data

--- a/example_v2/model_training/model_selection_v2.ipynb
+++ b/example_v2/model_training/model_selection_v2.ipynb
@@ -1330,15 +1330,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Training Logistic Regression Balanced...\n",
       "Training Logistic Regression...\n",
       "Training Decision Tree Classifier...\n",
+      "Training Random Forest Classifier Balanced...\n",
       "Training Random Forest Classifier...\n",
       "Training XGBoost Classifier...\n"
      ]
@@ -1371,39 +1373,53 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>5</th>\n",
        "      <td>XGBoost Classifier</td>\n",
        "      <td>0.457079</td>\n",
        "      <td>0.416321</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>4</th>\n",
        "      <td>Random Forest Classifier</td>\n",
-       "      <td>0.454395</td>\n",
-       "      <td>0.403784</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Logistic Regression</td>\n",
-       "      <td>0.430130</td>\n",
-       "      <td>0.362297</td>\n",
+       "      <td>0.451602</td>\n",
+       "      <td>0.408144</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>Logistic Regression</td>\n",
+       "      <td>0.432396</td>\n",
+       "      <td>0.366741</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
        "      <td>Decision Tree Classifier</td>\n",
        "      <td>0.426148</td>\n",
        "      <td>0.390207</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Random Forest Classifier Balanced</td>\n",
+       "      <td>0.329373</td>\n",
+       "      <td>0.339975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Logistic Regression Balanced</td>\n",
+       "      <td>0.271251</td>\n",
+       "      <td>0.286111</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      Model  Accuracy        F1\n",
-       "3        XGBoost Classifier  0.457079  0.416321\n",
-       "2  Random Forest Classifier  0.454395  0.403784\n",
-       "0       Logistic Regression  0.430130  0.362297\n",
-       "1  Decision Tree Classifier  0.426148  0.390207"
+       "                               Model  Accuracy        F1\n",
+       "5                 XGBoost Classifier  0.457079  0.416321\n",
+       "4           Random Forest Classifier  0.451602  0.408144\n",
+       "1                Logistic Regression  0.432396  0.366741\n",
+       "2           Decision Tree Classifier  0.426148  0.390207\n",
+       "3  Random Forest Classifier Balanced  0.329373  0.339975\n",
+       "0       Logistic Regression Balanced  0.271251  0.286111"
       ]
      },
      "metadata": {},
@@ -1419,9 +1435,11 @@
    ],
    "source": [
     "classification_models = {\n",
-    "    'Logistic Regression': LogisticRegression(max_iter=1000, random_state=42),\n",
+    "    'Logistic Regression Balanced': LogisticRegression(max_iter=1000, class_weight='balanced', random_state=42, n_jobs=-1),\n",
+    "    'Logistic Regression': LogisticRegression(max_iter=1000, random_state=42, n_jobs=-1),\n",
     "    'Decision Tree Classifier': DecisionTreeClassifier(random_state=42, max_depth=10),\n",
-    "    'Random Forest Classifier': RandomForestClassifier(n_estimators=100, class_weight='balanced', random_state=42, n_jobs=-1),\n",
+    "    'Random Forest Classifier Balanced': RandomForestClassifier(n_estimators=100, class_weight='balanced', max_depth=10, min_samples_leaf=5, random_state=42, n_jobs=-1),\n",
+    "    'Random Forest Classifier': RandomForestClassifier(n_estimators=100, random_state=42, n_jobs=-1),\n",
     "}\n",
     "if XGBOOST_AVAILABLE:\n",
     "    classification_models['XGBoost Classifier'] = XGBClassifier(n_estimators=100, random_state=42, n_jobs=-1, verbosity=0)\n",
@@ -1585,15 +1603,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Training Daily Logistic Regression Balanced...\n",
       "Training Daily Logistic Regression...\n",
       "Training Daily Decision Tree Classifier...\n",
+      "Training Daily Random Forest Classifier Balanced...\n",
       "Training Daily Random Forest Classifier...\n",
       "Training Daily XGBoost Classifier...\n"
      ]
@@ -1626,39 +1646,53 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>1</th>\n",
        "      <td>Logistic Regression</td>\n",
-       "      <td>0.656630</td>\n",
-       "      <td>0.590482</td>\n",
+       "      <td>0.650819</td>\n",
+       "      <td>0.573684</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>4</th>\n",
        "      <td>Random Forest Classifier</td>\n",
-       "      <td>0.637084</td>\n",
-       "      <td>0.545988</td>\n",
+       "      <td>0.624406</td>\n",
+       "      <td>0.555213</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>5</th>\n",
        "      <td>XGBoost Classifier</td>\n",
        "      <td>0.584786</td>\n",
        "      <td>0.559720</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>Decision Tree Classifier</td>\n",
        "      <td>0.505547</td>\n",
        "      <td>0.507064</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Random Forest Classifier Balanced</td>\n",
+       "      <td>0.445325</td>\n",
+       "      <td>0.492259</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Logistic Regression Balanced</td>\n",
+       "      <td>0.253038</td>\n",
+       "      <td>0.281595</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      Model  Accuracy        F1\n",
-       "0       Logistic Regression  0.656630  0.590482\n",
-       "2  Random Forest Classifier  0.637084  0.545988\n",
-       "3        XGBoost Classifier  0.584786  0.559720\n",
-       "1  Decision Tree Classifier  0.505547  0.507064"
+       "                               Model  Accuracy        F1\n",
+       "1                Logistic Regression  0.650819  0.573684\n",
+       "4           Random Forest Classifier  0.624406  0.555213\n",
+       "5                 XGBoost Classifier  0.584786  0.559720\n",
+       "2           Decision Tree Classifier  0.505547  0.507064\n",
+       "3  Random Forest Classifier Balanced  0.445325  0.492259\n",
+       "0       Logistic Regression Balanced  0.253038  0.281595"
       ]
      },
      "metadata": {},
@@ -1674,9 +1708,11 @@
    ],
    "source": [
     "daily_clf_models = {\n",
-    "    'Logistic Regression': LogisticRegression(max_iter=1000, random_state=42),\n",
+    "    'Logistic Regression Balanced': LogisticRegression(max_iter=1000, class_weight='balanced', random_state=42, n_jobs=-1),\n",
+    "    'Logistic Regression': LogisticRegression(max_iter=1000, random_state=42, n_jobs=-1),\n",
     "    'Decision Tree Classifier': DecisionTreeClassifier(random_state=42, max_depth=10),\n",
-    "    'Random Forest Classifier': RandomForestClassifier(n_estimators=100, class_weight='balanced', random_state=42, n_jobs=-1),\n",
+    "    'Random Forest Classifier Balanced': RandomForestClassifier(n_estimators=100, class_weight='balanced', max_depth=10, min_samples_leaf=5, random_state=42, n_jobs=-1),\n",
+    "    'Random Forest Classifier': RandomForestClassifier(n_estimators=100, random_state=42, n_jobs=-1),\n",
     "}\n",
     "if XGBOOST_AVAILABLE:\n",
     "    daily_clf_models['XGBoost Classifier'] = XGBClassifier(n_estimators=100, random_state=42, n_jobs=-1, verbosity=0)\n",
